<resources>
    <string name="app_name">自助盖章</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="using_seal">普通用印</string>
    <string name="using_seal_offline">紧急用印</string>
    <string name="get_seal">普通取印</string>
    <string name="get_seal_offline">紧急取印</string>
    <string name="return_seal">归还印章</string>
    <string name="using_seal_hint">请输入用印编码</string>
    <string name="get_seal_hint">请输入取印编码</string>
    <string name="send">发送</string>
    <string name="confirm">确认</string>
    <string name="scan_tip">扫码输入</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="title_activity_settings_preference">Settings</string>

    <string name="checking">验证中……</string>
    <string name="using_seal_code_invalid">用印编码不存在</string>
    <string name="using_seal_code_used">用印编码已使用</string>
    <string name="get_seal_code_invalid">取印编码不存在</string>
    <string name="get_seal_code_used">取印编码已使用</string>
    <string name="hardware_code_invalid">机器码不对应</string>
    <string name="using_seal_code_description">用印编码有效，确认盖章信息无误后，请点击确认拍照按钮，并拍下您的正面照以存档方可盖章</string>
    <string name="get_seal_code_description">取印编码有效，确认印章信息无误后，请点击确认拍照按钮，并拍下您的正面照以存档方可取印</string>
    <string name="confirm_take_photo">确认拍照</string>

    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
