<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_using_seal"
            android:icon="@mipmap/using_seal"
            android:title="@string/using_seal"></item>
        <item
            android:id="@+id/menu_get_seal"
            android:icon="@mipmap/get_seal"
            android:title="@string/get_seal"></item>
        <item
            android:id="@+id/menu_using_seal_offline"
            android:icon="@mipmap/using_seal_offline"
            android:title="@string/using_seal_offline"></item>
        <item
            android:id="@+id/menu_get_seal_offline"
            android:icon="@mipmap/get_seal_offline"
            android:title="@string/get_seal_offline"></item>
    </group>
    <item android:title="自助盖章">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@mipmap/setting"
                android:title="设置"></item>
            <item
                android:id="@+id/wifi"
                android:icon="@mipmap/setting"
                android:title="WiFi管理"></item>
            <item
                android:id="@+id/exit"
                android:icon="@mipmap/out"
                android:title="退出"></item>
        </menu>
    </item>

</menu>
