<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_view_horizontal_margin"
        android:layout_marginLeft="@dimen/card_view_horizontal_margin"
        android:layout_marginRight="@dimen/card_view_horizontal_margin"
        card_view:cardCornerRadius="@dimen/card_corner_radius">
        <LinearLayout
            android:layout_marginTop="@dimen/card_view_horizontal_margin"
            android:layout_marginLeft="@dimen/card_view_horizontal_margin"
            android:layout_marginRight="@dimen/card_view_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                    android:textSize="@dimen/title_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/using_seal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatEditText
                    android:textSize="@dimen/confirm_btn_size"
                    android:id="@+id/edit_using_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/using_seal_hint"
                    android:layout_weight="1"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_scan"
                    android:drawableStart="@mipmap/scan"
                    android:background="@android:color/white"
                    android:text="@string/scan_tip"
                    android:textSize="@dimen/confirm_btn_size"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center_vertical"
                    android:layout_width="@dimen/scan_btn_width"
                    android:layout_height="@dimen/scan_btn_size" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="@dimen/card_view_vertical_margin"
                android:layout_marginBottom="@dimen/card_view_vertical_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_using_code"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/confirm_btn_height"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/confirm_btn_size"
                    android:layout_centerHorizontal="true"
                    android:text="@string/send"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <com.dexafree.materialList.view.MaterialListView
        android:id="@+id/list_seal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatButton
            android:visibility="invisible"
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/confirm_btn_height"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/card_view_horizontal_margin"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/confirm_btn_size"
            android:paddingLeft="@dimen/card_view_horizontal_margin"
            android:paddingRight="@dimen/card_view_horizontal_margin"
            android:text="@string/confirm_take_photo" />
    </RelativeLayout>
</LinearLayout>
